Start on heroes page

--- a/src/Components/Home/Slider/Slide/Slide.scss
+++ b/src/Components/Home/Slider/Slide/Slide.scss
@@ -25,6 +25,7 @@
     align-items: center;
     border-radius: 0.5vh;
     margin: 2vh 0;
+    box-shadow: 0 0 1vw 0.2vw $color4;
 }
 
 .Slide__icon {
