--- a/src/Components/Heroes/Heroes.scss
+++ b/src/Components/Heroes/Heroes.scss
@@ -3,5 +3,8 @@
 .Heroes {
     width: 100%;
     height: 88vh;
-    background: $color4;
+    background-image: url('https://s5.gifyu.com/images/civilwar.jpg');
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-size: cover;
 }
