--- a/src/Components/Home/Slider/Slide/Slide.scss
+++ b/src/Components/Home/Slider/Slide/Slide.scss
@@ -7,7 +7,7 @@
     height: inherit;
     position: absolute;
     width: 100%;
-    background-color: black;
+    background-color: $color4;
     padding: 10vh;
     display: flex;
     justify-content: center;
