--- a/src/Components/Heroes/Heroes.scss
+++ b/src/Components/Heroes/Heroes.scss
@@ -7,4 +7,5 @@
     background-repeat: no-repeat;
     background-position-x: center;
     background-size: cover;
+    background-color: $color4;
 }
