--- a/src/Components/Sign/Sign.scss
+++ b/src/Components/Sign/Sign.scss
@@ -1,35 +1,31 @@
 @import '../../_colors';
 
-.LoginPanel {
+.Sign {
     min-height: 88vh;
     width: 100%;
     background-image: url('https://s5.gifyu.com/images/shield.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
+    background-color: $color4;
     display: flex;
     align-items: flex-start;
     justify-content: center;
     padding: 5vh;
 }
 
-.LoginPanel__form {
-    padding: 1vh 0;
-    display: flex;
-    flex-direction: column;
-}
-
-.LoginPanel__section {
+.Sign__section {
     background: $color3;
     box-shadow: 0 0 1vw 0 $color4;
-    border-radius: 0.3vh;
+    border-radius: 0.5vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 2vh 3vw;
 }
 
-.LoginPanel__Link {
-    color: $color1;
-    letter-spacing: 0.1vw;
+.Sign__form {
+    padding: 1vh 0;
+    display: flex;
+    flex-direction: column;
 }
