Finish creating signing up user using redux

--- a/src/Components/Modal/Modal.scss
+++ b/src/Components/Modal/Modal.scss
@@ -17,7 +17,8 @@
     padding: 2vh 3vw;
     background-color: $color4;
     box-shadow: 0 0 1vw 0 $color4;
-    font-size: 3vw;
-    color: green;
+    border-radius: 0.5vh;
+    font-size: 2vw;
+    color: $color3;
     letter-spacing: 0.1vw;
 }
