Finish login users

--- a/src/Components/HeroInfo/HeroDetails/HeroDetails.scss
+++ b/src/Components/HeroInfo/HeroDetails/HeroDetails.scss
@@ -13,6 +13,7 @@
     background-color: $color2;
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
 }
 
 .HeroDetails__ul {
