--- a/src/Components/Error/Error.scss
+++ b/src/Components/Error/Error.scss
@@ -9,6 +9,8 @@
 .Error__h2 {
     font-size: 2vw;
     text-align: center;
-    color: $color4;
+    background-color: $color4;
+    padding: 1vh 1vw;
+    color: $color3;
     margin: 2vh;
 }
