--- a/src/Components/Home/Slider/Slide/Slide.scss
+++ b/src/Components/Home/Slider/Slide/Slide.scss
@@ -4,6 +4,7 @@
     background-size: cover;
     background-position-x: center;
     background-attachment: fixed;
+    background-repeat: no-repeat;
     height: inherit;
     position: absolute;
     width: 100%;
