--- a/src/Components/MyCrew/MyCrew.scss
+++ b/src/Components/MyCrew/MyCrew.scss
@@ -4,10 +4,10 @@
     min-height: 88vh;
     width: 100%;
     background-color: $color4;
-    background-image: url('https://s5.gifyu.com/images/crew.jpg');
+    background-image: url('https://s5.gifyu.com/images/civilwar.jpg');
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center center;
+    background-position-x: center;
     display: flex;
     flex-direction: column;
     align-items: center;
