--- a/src/Components/Heroes/Heroes.scss
+++ b/src/Components/Heroes/Heroes.scss
@@ -2,10 +2,11 @@
 
 .Heroes {
     width: 100%;
-    height: 88vh;
-    background-image: url('https://s5.gifyu.com/images/civilwar.jpg');
+    min-height: 88vh;
+    background-image: url('https://s5.gifyu.com/images/crew.jpg');
     background-repeat: no-repeat;
-    background-position-x: center;
+    background-position: center center;
     background-size: cover;
     background-color: $color4;
+    filter: grayscale(10%);
 }
