--- a/src/Components/Heroes/HeroesPanel/HeroesPanel.scss
+++ b/src/Components/Heroes/HeroesPanel/HeroesPanel.scss
@@ -2,7 +2,7 @@
 
 .HeroesPanel {
     width: 100%;
-    height: inherit;
+    min-height: inherit;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -14,4 +14,12 @@
     display: flex;
     justify-content: space-around;
     padding: 10vh;
+}
+
+@media (max-width: 800px) {
+    .HeroesPanel__div {
+        flex-direction: column;
+        padding: 5vh 10vh;
+        align-items: center;
+    }
 }
