--- a/src/Components/Navigation/Login/Login.module.scss
+++ b/src/Components/Navigation/Login/Login.module.scss
@@ -19,7 +19,7 @@
 
 .Login__logged:hover .Login__ul {
     opacity: 1;
-    transform: translateY(0);
+    transform: translateX(0);
     pointer-events: auto;
 }
 
@@ -41,7 +41,7 @@
     flex-direction: column;
     align-items: center;
     opacity: 0;
-    transform: translateY(-5vh);
+    transform: translateX(-5vh);
     pointer-events: none;
     transition: all 0.3s ease-out;
     border-radius: 0.4vh;
