--- a/src/Components/Heroes/Pagination/Link/Link.scss
+++ b/src/Components/Heroes/Pagination/Link/Link.scss
@@ -23,9 +23,16 @@
     background: $color3;
 }
 
+@media (max-width: 1000px) {
+    .Link {
+        font-size: 2.2vw;
+        padding: 1.5vh 1.5vw;
+    }
+}
+
 @media (max-width: 900px) {
     .Link {
-        font-size: 2vw;
+        font-size: 2.3vw;
         padding: 1.5vh 1.5vw;
     }
 }
@@ -47,7 +54,22 @@
 
 @media (max-width: 450px) {
     .Link {
-        font-size: 4vw;
-        padding: 2vh 2.5vw;
+        margin: 0 3vw;
+        font-size: 5vw;
+        padding: 2vh 2.8vw;
+    }
+}
+
+@media (max-width: 400px) {
+    .Link {
+        font-size: 6vw;
+        padding: 2vh 3vw;
+    }
+}
+
+@media (max-width: 300px) {
+    .Link {
+        font-size: 7vw;
+        padding: 2vh 3.3vw;
     }
 }
