--- a/src/Components/Navigation/Login/Login.module.scss
+++ b/src/Components/Navigation/Login/Login.module.scss
@@ -69,3 +69,67 @@
     align-items: center;
     text-align: center;
 }
+
+@media (max-width: 1000px) {
+    .Login {
+        margin: 0 0;
+        font-size: 2.3vw;
+    }
+    .Login__icon {
+        font-size: 2.5vw;
+    }
+}
+
+@media (max-width: 800px) {
+    .Login {
+        font-size: 2.8vw;
+    }
+    .Login__icon {
+        font-size: 3vw;
+    }
+}
+
+@media (max-width: 700px) {
+    .Login {
+        font-size: 3.3vw;
+    }
+    .Login__icon {
+        font-size: 3.5vw;
+    }
+}
+
+@media (max-width: 600px) {
+    .Login {
+        font-size: 3.8vw;
+    }
+    .Login__icon {
+        font-size: 4vw;
+    }
+}
+
+@media (max-width: 500px) {
+    .Login {
+        font-size: 4.3vw;
+    }
+    .Login__icon {
+        font-size: 4.5vw;
+    }
+}
+
+@media (max-width: 400px) {
+    .Login {
+        font-size: 4.8vw;
+    }
+    .Login__icon {
+        font-size: 5vw;
+    }
+}
+
+@media (max-width: 350px) {
+    .Login {
+        font-size: 5.3vw;
+    }
+    .Login__icon {
+        font-size: 5.5vw;
+    }
+}
