--- a/src/Components/Navigation/Nav/Nav.module.scss
+++ b/src/Components/Navigation/Nav/Nav.module.scss
@@ -26,3 +26,55 @@
     font-weight: bold;
     margin: 0 0.3vw;
 }
+
+@media (max-width: 1000px) {
+    .Nav {
+        height: auto;
+        margin: 4vh 0;
+    }
+    .Nav__Link {
+        color: $color3;
+        font-size: 2.5vw;
+        margin: 1vh 0;
+    }
+    .Nav__ul {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+}
+
+@media (max-width: 800px) {
+    .Nav__Link {
+        font-size: 3vw;
+    }
+}
+
+@media (max-width: 700px) {
+    .Nav__Link {
+        font-size: 3.5vw;
+    }
+}
+
+@media (max-width: 600px) {
+    .Nav__Link {
+        font-size: 4vw;
+    }
+}
+
+@media (max-width: 500px) {
+    .Nav__Link {
+        font-size: 4.5vw;
+    }
+}
+
+@media (max-width: 500px) {
+    .Nav__Link {
+        font-size: 5.5vw;
+    }
+}
+
+@media (max-width: 350px) {
+    .Nav__Link {
+        font-size: 6.5vw;
+    }
+}
