--- a/src/Components/Navigation/Navigation.module.scss
+++ b/src/Components/Navigation/Navigation.module.scss
@@ -6,3 +6,33 @@
     background-color: $color2;
     height: 12vh;
 }
+
+.ResNavigation {
+    display: none;
+    height: 12vh;
+    position: relative;
+}
+
+.ResNavigation__options {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 1100;
+    background-color: $color4;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 10vh;
+}
+
+@media (max-width: 1000px) {
+    .Navigation {
+        display: none;
+    }
+    .ResNavigation {
+        display: block;
+    }
+}
